templates/dahboard//assets/tabs: fix organisation indicator in dashboard and tabs on mobile and small fix for upload widget in small screens

--- a/meinberlin/assets/scss/components/_tabs.scss
+++ b/meinberlin/assets/scss/components/_tabs.scss
@@ -15,16 +15,6 @@
     padding-top: 2em;
 }
 
-.tablist--mobile {
-    min-width: 100%;
-    padding-bottom: $padding;
-
-    @media screen and (min-width: $breakpoint) {
-        min-width: auto;
-        padding-bottom: 0;
-    }
-}
-
 .tab {
     display: inline-block;
     position: relative;
@@ -57,6 +47,11 @@
 
 .tablist--left {
     text-align: left;
+    min-width: 100%;
+
+    @media screen and (min-width: $breakpoint) {
+        min-width: auto;
+    }
 }
 
 // FIXME this should be refactored - ensure tabs remain on single line mobile
@@ -78,7 +73,3 @@
         margin-bottom: -1px;
     }
 }
-
-// .tablist--left {
-//     float: left;
-// }
